--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "LESS Grid",
-  "description": "Responsive 12 column grid with fluid or fixed breakpoints",
-  "version": "1.0.1",
+  "description": "Responsive dynamic column grid with fluid or fixed breakpoints",
+  "version": "1.0.3",
   "keywords": [
     "less",
     "css",
