--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LESS Grid",
+  "name": "LESS-Grid",
   "description": "Responsive dynamic grid generator with fluid or fixed breakpoints",
   "version": "1.0.0",
   "keywords": [
@@ -8,7 +8,7 @@
     "grid",
     "responsive"
   ],
-  "compilePath": "dist/",
+  "compilePath": "../dist/",
   "homepage": "https://github.com/matejsvajger/less-grid",
   "os": [
     "web"
@@ -28,7 +28,7 @@
     "grunt-banner": "~0.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-less": "~0.9.0",
+    "grunt-contrib-less": "~0.11.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-jade": "~0.11.0",
